--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="wrapper">
         <div class="player">
-          <video class="video" src="/video/slomo.mp4"></video>
+          <video class="video" src="https://media.istockphoto.com/videos/cycling-at-sunset-video-id1219559746"></video>
           <div class="controls">
             <div class="controls_play">
               <img class="play_btn" src="http://s1.iconbird.com/ico/2013/6/289/w512h5121371656105play.png" alt="">
